# HyperGrab

./: Cargo.toml  README.md  foo.txt
crates/downloader-async/: Cargo.toml
crates/downloader-async/src/: downloader.rs  main.rs  server_task.rs
crates/downloader-mt/: Cargo.toml
crates/downloader-mt/src/: lib.rs  main.rs
extension/: background.js  manifest.json
extension/firefox/: background.js  manifest.json
src/: lib.rs  main.rs
