[package]
name = "downloader-async"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48" , features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "http2"] }
futures = "0.3"
anyhow = "1.0"
axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
