[package]
name = "downloader-mt"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "blocking", "http2"] }
url = "2.5.4"
dirs = "6.0.0"
anyhow = "1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
http = "1.3.1"
tokio = { version = "1.47.1" , features = ["full"] }